--- a/src/style/login.less
+++ b/src/style/login.less
@@ -1,5 +1,5 @@
 .bimg {
-    background: url("../images/login-back.jpg") 0 -70px;
+    background: url("../img/login-back.jpg") 0 -70px;
     background-size: 375px 900px;
     height: 900px;
     width: 375px;
