--- a/src/style/shoppingCart.less
+++ b/src/style/shoppingCart.less
@@ -1,3 +1,5 @@
+@color: #ff6700;
+
 body {
     background: #f5f5f5;
 }
@@ -89,10 +91,7 @@ body {
         background: #fff;
         width: 1226px;
         margin: 0 auto;
-        height: 70px;
-        line-height: 70px;
-        border: 1px solid red;
-
+        // border: 1px solid red;
         // box-sizing: border-box;
         // padding: 0 20px;1
         // margin: 0 20px;
@@ -106,18 +105,19 @@ body {
             font-size: 14px;
             color: #424242;
             width: 100%;
+            height: 70px;
+            line-height: 70px;
 
             div {
                 float: left;
             }
 
             .t-checkbox {
-                // margin-left: 20px;
+                height: 70px;
 
-                // width: 1px;
-                // height: 1px;
                 p {
                     float: right;
+
                 }
             }
 
@@ -153,6 +153,7 @@ body {
             background: #fff;
             width: 1226px;
 
+
             div {
                 float: left;
             }
@@ -172,6 +173,7 @@ body {
                 .p-checkbox {
                     width: 110px;
                     float: left;
+                    margin-top: 24px;
                 }
 
                 .p-img {
@@ -184,12 +186,14 @@ body {
 
                 .p-name {
                     width: 380px;
+                    margin-top: 24px;
                 }
 
                 .p-price {
                     width: 128px;
                     text-align: center;
                     padding-right: 30px;
+                    margin-top: 24px;
                     // font-size: 16px;
                 }
 
@@ -234,7 +238,8 @@ body {
                 .p-sum {
                     width: 200px;
                     text-align: center;
-                    color: #ff6700
+                    color: #ff6700;
+                    margin-top: 24px;
                 }
 
                 .p-action {
@@ -242,6 +247,7 @@ body {
                     text-align: center;
                     margin-right: 20px;
                     color: #757575;
+                    margin-top: 24px;
                 }
             }
 
@@ -249,4 +255,29 @@ body {
             float: left;
         }
     }
+}
+
+.cart-bar {
+    float: left;
+    height: 50px;
+    width: 100%;
+    background: #fff;
+    margin-top: 16px;
+    line-height: 50px;
+    font-size: 14px;
+
+    .section-left {
+        margin-left: 26px;
+
+        p {
+            float: left;
+        }
+
+        i {
+            font-style: normal;
+            color: @color;
+
+        }
+    }
+
 }
